# rust-os

./: Cargo.toml
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  tests.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
