[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.18"
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.9"
uart_16550 = "0.2.17"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false